--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,8 @@
+2003-05-22  Ian Lance Taylor  <ian@airs.com>
+
+	* disasm.c (gdb_disassemble_info): Initialize disassemble_info
+	with fprintf_filtered, not fprintf_unfiltered.
+
 2003-05-22  Andrew Cagney  <cagney@redhat.com>
 
 	* stack.c (frame_info): Inline extract_address, replacing it with
