* ppc-linux-nat.c (store_altivec_registers): Don't cast fourth argument to ptrace to int; the system headers should give it the right type, and pointers don't fit in ints on powerpc64-*-*.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,9 @@
+2003-05-28  Jim Blandy  <jimb@redhat.com>
+
+	* ppc-linux-nat.c (store_altivec_registers): Don't cast fourth
+	argument to ptrace to int; the system headers should give it the
+	right type, and pointers don't fit in ints on powerpc64-*-*.
+
 2003-05-28  H.J. Lu <hongjiu.lu@intel.com>
 
 	* dwarf2read.c (process_die): Handle DW_TAG_try_block and
