Use gdbarch methods for solib stuff on PowerPC Linux. * config/powerpc/tm-linux.h (IN_SOLIB_CALL_TRAMPOLINE, SKIP_TRAMPOLINE_CODE): #undef these, so the gdbarch methods will show through. * ppc-linux-tdep.c (ppc_linux_init_abi): Register IN_SOLIB_CALL_TRAMPOLINE and SKIP_TRAMPOLINE_CODE methods here, giving the same effect as the #definitions above.

--- a/gdb/ChangeLog
+++ b/gdb/ChangeLog
@@ -1,3 +1,13 @@
+2003-05-29  Jim Blandy  <jimb@redhat.com>
+
+	Use gdbarch methods for solib stuff on PowerPC Linux.
+	* config/powerpc/tm-linux.h (IN_SOLIB_CALL_TRAMPOLINE,
+	SKIP_TRAMPOLINE_CODE): #undef these, so the gdbarch methods will
+	show through.
+	* ppc-linux-tdep.c (ppc_linux_init_abi): Register
+	IN_SOLIB_CALL_TRAMPOLINE and SKIP_TRAMPOLINE_CODE methods here,
+	giving the same effect as the #definitions above.
+
 2003-05-29  Adam Fedor  <fedor@gnu.org>
 
 	* objc-lang.c (CONVERT_FUNCPTR): Remove macro
